<resources>
    <string name="app_name">Help A Child</string>
    <string name="title_home">Home</string>
    <string name="title_child">Child </string>
    <string name="title_sponsor">Sponsor</string>
    <string name="add_child">Add Child</string>
    <string name="hint_fullname">Full Name</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Failed to Save</string>
    <string name="fillindetails">Fill in the details</string>
    <string name="age">Date of Birth</string>
    <string name="pickadate">Pick a date</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="parentidno">Parent ID No</string>
    <string name="bio">Child Bio</string>
    <string name="location">Location</string>
    <string name="updatedchild">Child updated successfully</string>
    <string name="fab_content_description">Add Sponsor</string>
    <string name="phone_no">Phone Number</string>
    <string name="email">Email</string>
    <string name="paymentcard">Payment Card</string>
    <string name="no_sponsor_image_content_description">"No Sponsor added "</string>
    <string name="remove_sponsor">Remove Sponsor</string>
    <string name="update_sponsor">Update Sponsor</string>
    <string name="sponsorbio">Bio</string>
    <string name="child_image_content_description">Child Profile Photo</string>
    <string name="remove_child">Remove Child</string>
    <string name="update_child">Update Child</string>
    <string name="takeapic">Take Child\'s Photo</string>
    <string name="childdetails">Child Details</string>
    <string name="sponsordetails">Sponsor Details</string>
</resources>