<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.fh.helpachild.ui.Donations.DonationsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_child"
        android:name="org.fh.helpachild.ui.child.ChildFragment"
        android:label="@string/title_child"
        tools:layout="@layout/fragment_child" />

    <fragment
        android:id="@+id/navigation_sponsor"
        android:name="org.fh.helpachild.ui.sponsor.SponsorFragment"
        android:label="@string/title_sponsor"
        tools:layout="@layout/fragment_sponsor" />
</navigation>