<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/full_name_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/hint_fullname"
            android:textAppearance="?attr/textAppearanceBody1" />


        <TextView
            android:id="@+id/full_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
             />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/contact_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/phone_no"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
           />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/email_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/email"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="16dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/country_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/country"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/country"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="16dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/payment_card_test"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/paymentcard"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/payment_card"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="16dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bio_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/sponsorbio"
            android:textAppearance="?attr/textAppearanceBody1" />


        <TextView
            android:id="@+id/bio"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="16dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/update_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_sponsor"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/remove_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remove_sponsor"
            android:layout_margin="8dp"/>
    </LinearLayout>
</LinearLayout>