<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">






  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">
      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:gravity="center_horizontal"
          android:text="@string/fillindetails"
          android:textAlignment="center"
          android:textSize="20sp"
          android:textStyle="bold" />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/full_name_text_input_layout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="8dp">

          <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/full_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:ems="20"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:hint="@string/hint_fullname" />


      </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/pickadate"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/pickadate"
                android:src="@drawable/ic_outline_calendar_today_24"

                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dob_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/dob"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:ems="16"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/age" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gender_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/gender" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/country_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/country" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/location" />


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/parentidno_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/parent_idno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/parentidno" />


        </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/bio_text_input_layout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:layout_margin="8dp">


          <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/bio"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:ems="20"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:hint="@string/bio" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/profile_photo_text_input_layout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="8dp">
          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              <androidx.appcompat.widget.AppCompatTextView
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/takeapic"
                  android:ems="16"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintWidth_percent=".7"
              />

          <androidx.appcompat.widget.AppCompatImageButton
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:src="@drawable/ic_outline_photo_camera_24"
              android:layout_gravity="center_horizontal"
              android:id="@+id/take_photo"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintWidth_percent=".3"
              android:background="@null"
             />
          </androidx.constraintlayout.widget.ConstraintLayout>

          <ImageView
              android:id="@+id/profile_photo"
              android:layout_width="200dp"
              android:layout_height="200dp"
              android:layout_gravity="center_horizontal"
              android:hint="@string/profile_photo"
              android:scaleType="fitXY"
              android:visibility="gone"/>


      </com.google.android.material.textfield.TextInputLayout>


      <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/save_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/button_save"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/colorPrimary"/>


        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>
</ScrollView>